docs: add doc to signin
